# duckdb-avro

./: .gitignore  .gitmodules  CMakeLists.txt  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
scripts/: create_timestamp_ms.py
src/: avro_copy.cpp  avro_extension.cpp  avro_metadata.cpp  avro_multi_file_info.cpp  avro_reader.cpp  field_ids.cpp
src/include/: avro_copy.hpp  avro_metadata.hpp  avro_multi_file_info.hpp  avro_reader.hpp  avro_type.hpp  field_ids.hpp
test/: create_test_file.py  localtimestamp-millis.avro  time_millis.avro  timestamp_millis.avro  timestamptz_millis.avro
test/sql/: avro.test  avro_metadata.test  bigdata.test  external_file_cache.test  iceberg.test  read_avro_millis.test  read_avro_ms.test  test_missing_file.test  timestamp_millis.avro
test/sql/copy/: all_types.test  codec.test  duplicate_name.test  empty_struct.test  field_ids.test  invalid_name.test  invalid_option.test  large_list.test_slow  large_list_struct_coverage.test_slow  nullable.test  test_decimal_types.test  test_temporal_types.test  test_uuid_type.test  write_metadata.test  written_statistics.test
vcpkg_ports/avro-c/: portfile.cmake
